# framework.context.context-manager

./: AUTHORS  CMakeLists.txt  Copyright
armv7l/: contextd  libcapi-context-manager.so.1.0.6
doc/: activity_recognition_doc.h  gesture_recognition_doc.h
i586/: contextd  libcapi-context-manager.so.1  libcapi-context-manager.so.1.0.6
include/: activity_recognition.h  context_manager.h  context_manager_doc.h  context_manager_types.h  gesture_recognition.h
packaging/: context-manager.manifest  context-manager.service  context-manager.spec  libcore-context-manager.spec  org.tizen.sensor.context.service
src/activity/: activity.cpp  activity.h
src/gesture/: gesture.cpp  gesture.h  motion_engine.cpp  motion_engine.h
src/shared/: ctx_error.h  ctx_types_private.h  ctx_util_misc.cpp  ctx_util_misc.h  ctx_util_sensor.cpp  ctx_util_sensor.h  handle_map.h
